--- a/skills_heroku-master/src/main/resources/static/alterado.html
+++ b/skills_heroku-master/src/main/resources/static/alterado.html
@@ -35,6 +35,7 @@
 					if(!data[0].alterado){
 
 						alert("Chamado não Encontrado");
+						window.location.href = '/index.html';
 						
 					} else {
 					
