--- a/skills_heroku-master/src/main/resources/static/index.html
+++ b/skills_heroku-master/src/main/resources/static/index.html
@@ -25,11 +25,11 @@
 					if(data[0].acesso == '0'){
 						
 						alert("Usuário Comum");
-						window.location.href = '/darpermissao.html';
+						window.location.href = '/index.html';
 						
 					}else{
 						if(data[0].acesso == '1'){
-							window.location.href = '/pesquisarchamadoid.html';
+							window.location.href = '/menuadm.html';
 						}else{
 							alert("Usuário não cadastrado");
 							window.location.href = '/index.html';
