--- a/skills_heroku-master/src/main/resources/static/menuadm.html
+++ b/skills_heroku-master/src/main/resources/static/menuadm.html
@@ -15,12 +15,18 @@
 		function chamadoId(){
 			window.location.href = '/pesquisarchamadoid.html'
 		}
+		function novoADM(){
+			window.location.href = '/darpermissao.html'
+		}
 	</script>
    
   </head>
   <body>
-	
+	<br>
 	<button onclick="chamadoId()" class="btn btn-primary col-md-offset-4 col-md-4">Pesquisar chamado por Id</button>
+	<br>
+	<br>
+	<button onclick="novoADM()" class="btn btn-primary col-md-offset-4 col-md-4">Novo administrador</button>
 	
   </body>
 </html>
