--- a/skills_heroku-master/src/main/resources/static/menuadm.html
+++ b/skills_heroku-master/src/main/resources/static/menuadm.html
@@ -18,6 +18,9 @@
 		function novoADM(){
 			window.location.href = '/darpermissao.html'
 		}
+		function allChamados(){
+			window.location.href = '/exibirchamados.html'
+		}
 	</script>
    
   </head>
@@ -27,6 +30,9 @@
 	<br>
 	<br>
 	<button onclick="novoADM()" class="btn btn-primary col-md-offset-4 col-md-4">Novo administrador</button>
+	<br>
+	<br>
+	<button onclick="allChamados()" class="btn btn-primary col-md-offset-4 col-md-4">Allchamados</button>
 	
   </body>
 </html>
