--- a/skills_heroku-master/src/main/resources/static/darpermissao.html
+++ b/skills_heroku-master/src/main/resources/static/darpermissao.html
@@ -2,13 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-	
     <title>Permissão</title>
+	
     
 	<script src="http://code.jquery.com/jquery-latest.min.js"></script>
 	
 
 	<link href="http://getbootstrap.com/dist/css/bootstrap.min.css" rel=stylesheet>
+	<link href="css/bootstrap.css" rel="stylesheet">
 	
 	
 	<script>
@@ -41,6 +42,14 @@
    
   </head>
   <body>
+  <ul class="nav nav-pills">
+			<li class="active"><a href="menuadm.html">Painel de Controle</a></li>
+			<li><a href="abrirChamado.html">Abrir Chamado</a></li>
+			<li><a href="exibirchamados.html">Listar Chamados</a></li>
+			<li><a href="darpermissao.html">Dar Permissão</a></li>
+			<li><a href="pesquisarchamadoid.html">Edição de Chamado Específico</a></li>
+			
+  </ul>
 		<br>
 		<br>
 		<form class="form-horizontal" method="post" id="form">
