--- a/skills_heroku-master/src/main/resources/static/exibirchamados.html
+++ b/skills_heroku-master/src/main/resources/static/exibirchamados.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="utf-8">
-	<title>Lista de chamados</title>
+  <head>
+    <meta charset="utf-8">
+    <title>Lista de Chamados</title>
+	
+    
 	<script src="http://code.jquery.com/jquery-latest.min.js"></script>
 	
-	<link href="css/bootstrap.min.css" rel=stylesheet>
- 
+
+	<link href="http://getbootstrap.com/dist/css/bootstrap.min.css" rel=stylesheet>
 	<link href="css/bootstrap.css" rel="stylesheet">
    
    <script>
@@ -37,6 +39,14 @@
    </script>
 </head>
 <body>
+<ul class="nav nav-pills">
+			<li class="active"><a href="menuadm.html">Painel de Controle</a></li>
+			<li><a href="abrirChamado.html">Abrir Chamado</a></li>
+			<li><a href="exibirchamados.html">Listar Chamados</a></li>
+			<li><a href="darpermissao.html">Dar Permissão</a></li>
+			<li><a href="pesquisarchamadoid.html">Edição de Chamado Específico</a></li>
+			
+</ul>
 
 <form class="form-horizontal" method="post" id="form">	
 	<label for="select" class="col-md-4 control-label" >Ordenação por: </label>
