--- a/skills_heroku-master/src/main/resources/static/pesquisarchamadoid.html
+++ b/skills_heroku-master/src/main/resources/static/pesquisarchamadoid.html
@@ -2,13 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Alterar Chamado</title>
+    <title>Achar Chamado</title>
 	
     
 	<script src="http://code.jquery.com/jquery-latest.min.js"></script>
 	
 
-	<link href="css/bootstrap.min.css" rel=stylesheet>
+	<link href="http://getbootstrap.com/dist/css/bootstrap.min.css" rel=stylesheet>
+	<link href="css/bootstrap.css" rel="stylesheet">
 	
 	
 	<script>
@@ -47,6 +48,14 @@
 
 
   </head>
+  <ul class="nav nav-pills">
+			<li class="active"><a href="menuadm.html">Painel de Controle</a></li>
+			<li><a href="abrirChamado.html">Abrir Chamado</a></li>
+			<li><a href="exibirchamados.html">Listar Chamados</a></li>
+			<li><a href="darpermissao.html">Dar Permissão</a></li>
+			<li><a href="pesquisarchamadoid.html">Edição de Chamado Específico</a></li>
+			
+  </ul>
   <body>
 		<br>
 		<br>
